@@ -3,7 +3,7 @@ from distutils.core import setup
 
 setup(
     name = "pysmb",
-    version = "1.0.4",
+    version = "1.0.5",
     author = "Michael Teo",
     author_email = "miketeo@miketeo.net",
     license = "zlib/libpng",
