@@ -1,12 +1,15 @@
 
 [server]
-name = SERVER
-ip = 192.168.1.1
+#name = MICHAELTEO-U330
+#ip = 192.168.1.152
+name = MICHAEL-I5PC
+ip = 192.168.1.108
 port = 139
 
 [client]
 name = TESTCLIENT
 
 [user]
-name = myuser
-password = mypassword
+#name = michael teo
+name = michael
+password = xundui64
